feat: register infusion recipe display